@@ -159,6 +159,144 @@ bool DataBase::isTheDBCreated()
     }
     return false;
 }
+
+bool DataBase::createTableLog()
+{
+    QSqlQuery query;
+    query.exec("CREATE TABLE log ("
+             "id INTEGER PRIMARY KEY AUTOINCREMENT, "
+             "qso_date VARCHAR(10) NOT NULL, "
+             "time_on VARCHAR(8) NOT NULL, "
+             "call VARCHAR(40) NOT NULL, "
+             "rst_sent VARCHAR, "
+             "rst_rcvd VARCHAR, "
+             "bandid INTEGER NOT NULL, "
+             "modeid INTEGER NOT NULL, "
+             "srx VARCHAR(10), "
+             "stx VARCHAR(10), "
+             "points INTEGER,"
+             "multiplier INTEGER,"
+             "cqz INTEGER,"
+             "ituz INTEGER,"
+             "dxcc INTEGER,"
+             "address VARCHAR, "
+             "age INTEGER, "
+             "cnty VARCHAR, "
+             "comment VARCHAR, "
+             "a_index INTEGER, "
+             "ant_az INTEGER, "
+             "ant_el INTEGER, "
+             "ant_path INTEGER, "
+             "arrl_sect INTEGER, "
+             "band_rx INTEGER, "
+             "checkcontest VARCHAR, "
+             "class VARCHAR, "
+             "contacted_op VARCHAR(40), "
+             "contest_id VARCHAR, "
+             "country VARCHAR, "
+             "credit_submitted VARCHAR, "
+             "credit_granted VARCHAR, "
+             "distance INTEGER, "
+             "email VARCHAR, "
+             "eq_call VARCHAR, "
+             "eqsl_qslrdate VARCHAR(10), "
+             "eqsl_qslsdate VARCHAR(10), "
+             "eqsl_qsl_rcvd VARCHAR(1), "
+             "eqsl_qsl_sent VARCHAR(1), "
+             "force_init INTEGER, "
+             "freq INTEGER, "
+             "freq_rx INTEGER, "
+             "gridsquare VARCHAR, "
+             "iota VARCHAR(6), "
+             "iota_island_id VARCHAR, "
+             "k_index INTEGER, "
+             "lat VARCHAR(11), "
+             "lon VARCHAR(11), "
+             "lotw_qslrdate VARCHAR(10), "
+             "lotw_qslsdate VARCHAR(10), "
+             "lotw_qsl_rcvd VARCHAR(1), "
+             "lotw_qsl_sent VARCHAR(1), "
+             "max_bursts INTEGER, "
+             "ms_shower VARCHAR, "
+             "my_city VARCHAR, "
+             "my_cnty VARCHAR, "
+             "my_country INTEGER, "
+             "my_cq_zone INTEGER, "
+             "my_gridsquare VARCHAR, "
+             "my_iota VARCHAR(6), "
+             "my_iota_island_id VARCHAR, "
+             "my_lat VARCHAR(11), "
+             "my_lon VARCHAR(11), "
+             "my_name VARCHAR, "
+             "my_rig VARCHAR, "
+             "my_sig VARCHAR, "
+             "my_sig_info VARCHAR, "
+             "my_state VARCHAR, "
+             "my_street VARCHAR, "
+             "name VARCHAR, "
+             "notes VARCHAR, "
+             "nr_bursts INTEGER, "
+             "nr_pings INTEGER, "
+             "operator VARCHAR, "
+             "owner_callsign VARCHAR, "
+             "pfx VARCHAR, "
+             "precedence VARCHAR, "
+             "prop_mode VARCHAR(8), "
+             "public_key VARCHAR, "
+             "qslmsg VARCHAR, "
+             "qslrdate VARCHAR(10), "
+             "qslsdate VARCHAR(10), "
+             "qsl_rcvd VARCHAR(1), "
+             "qsl_sent VARCHAR(1), "
+             "qsl_rcvd_via VARCHAR(1), "
+             "qsl_sent_via VARCHAR(1), "
+             "qsl_via VARCHAR, "
+             "qso_complete VARCHAR(1), "
+             "qso_random INTEGER, "
+             "qth VARCHAR, "
+             "rx_pwr REAL, "
+             "sat_mode VARCHAR, "
+             "sat_name VARCHAR, "
+             "sfi INTEGER, "
+             "sig VARCHAR, "
+             "sig_info VARCHAR, "
+             "srx_string VARCHAR, "
+             "stx_string VARCHAR, "
+             "state VARCHAR, "
+             "station_callsign VARCHAR, "
+             "swl INTEGER, "
+             "ten_ten INTEGER, "
+             "tx_pwr REAL, "
+             "web VARCHAR, "
+             "qso_date_off VARCHAR(10), "
+             "time_off VARCHAR(8), "
+             "transmiterid VARCHAR, "
+             "marked VARCHAR(1), "
+             "lognumber INTEGER NOT NULL, "
+
+             "UNIQUE (call, qso_date, time_on, bandid, modeid, lognumber), "
+             "FOREIGN KEY (qso_complete) REFERENCES qso_complete_enumeration, "
+             "FOREIGN KEY (qsl_rcvd_via) REFERENCES qsl_via_enumeration, "
+             "FOREIGN KEY (qsl_sent_via) REFERENCES qsl_via_enumeration, "
+             "FOREIGN KEY (qsl_rcvd) REFERENCES qsl_rec_status, "
+             "FOREIGN KEY (qsl_sent) REFERENCES qsl_sent_status, "
+             "FOREIGN KEY (prop_mode) REFERENCES prop_mode_emumeration, "
+             "FOREIGN KEY (my_country) REFERENCES entity, "
+             "FOREIGN KEY (lotw_qsl_rcvd) REFERENCES qsl_rec_status, "
+             "FOREIGN KEY (lotw_qsl_sent) REFERENCES qsl_sent_status, "
+             "FOREIGN KEY (eqsl_qsl_rcvd) REFERENCES qsl_rec_status, "
+             "FOREIGN KEY (eqsl_qsl_sent) REFERENCES qsl_sent_status, "
+             "FOREIGN KEY (credit_submitted) REFERENCES award_enumeration, "
+             "FOREIGN KEY (credit_granted) REFERENCES award_enumeration, "
+             "FOREIGN KEY (country) REFERENCES entity, "
+             "FOREIGN KEY (ant_path) REFERENCES ant_path_enumeration, "
+             "FOREIGN KEY (arrl_sect) REFERENCES arrl_sect_enumeration, "
+             "FOREIGN KEY (band_rx) REFERENCES band, "
+             "FOREIGN KEY (modeid) REFERENCES mode, "
+             "FOREIGN KEY (dxcc) REFERENCES entity, "
+             "FOREIGN KEY (bandid) REFERENCES band)");
+}
+
 bool DataBase::createDataBase()
 {
     //qDebug() << "DataBase::createDataBase"  << endl;
@@ -216,138 +354,7 @@ bool DataBase::createDataBase()
                   "UNIQUE (cabrillo, name) )");
 
 
-      query.exec("CREATE TABLE log ("
-               "id INTEGER PRIMARY KEY AUTOINCREMENT, "
-               "qso_date VARCHAR(10) NOT NULL, "
-               "time_on VARCHAR(8) NOT NULL, "
-               "call VARCHAR(40) NOT NULL, "
-               "rst_sent VARCHAR, "
-               "rst_rcvd VARCHAR, "
-               "bandid INTEGER NOT NULL, "
-               "modeid INTEGER NOT NULL, "
-               "srx VARCHAR(10), "
-               "stx VARCHAR(10), "
-               "points INTEGER,"
-               "multiplier INTEGER,"
-               "cqz INTEGER,"
-               "ituz INTEGER,"
-               "dxcc INTEGER,"
-               "address VARCHAR, "
-               "age INTEGER, "
-               "cnty VARCHAR, "
-               "comment VARCHAR, "
-               "a_index INTEGER, "
-               "ant_az INTEGER, "
-               "ant_el INTEGER, "
-               "ant_path INTEGER, "
-               "arrl_sect INTEGER, "
-               "band_rx INTEGER, "
-               "checkcontest VARCHAR, "
-               "class VARCHAR, "
-               "contacted_op VARCHAR(40), "
-               "contest_id VARCHAR, "
-               "country VARCHAR, "
-               "credit_submitted VARCHAR, "
-               "credit_granted VARCHAR, "
-               "distance INTEGER, "
-               "email VARCHAR, "
-               "eq_call VARCHAR, "
-               "eqsl_qslrdate VARCHAR(10), "
-               "eqsl_qslsdate VARCHAR(10), "
-               "eqsl_qsl_rcvd VARCHAR(1), "
-               "eqsl_qsl_sent VARCHAR(1), "
-               "force_init INTEGER, "
-               "freq INTEGER, "
-               "freq_rx INTEGER, "
-               "gridsquare VARCHAR, "
-               "iota VARCHAR(6), "
-               "iota_island_id VARCHAR, "
-               "k_index INTEGER, "
-               "lat VARCHAR(11), "
-               "lon VARCHAR(11), "
-               "lotw_qslrdate VARCHAR(10), "
-               "lotw_qslsdate VARCHAR(10), "
-               "lotw_qsl_rcvd VARCHAR(1), "
-               "lotw_qsl_sent VARCHAR(1), "
-               "max_bursts INTEGER, "
-               "ms_shower VARCHAR, "
-               "my_city VARCHAR, "
-               "my_cnty VARCHAR, "
-               "my_country INTEGER, "
-               "my_cq_zone INTEGER, "
-               "my_gridsquare VARCHAR, "
-               "my_iota VARCHAR(6), "
-               "my_iota_island_id VARCHAR, "
-               "my_lat VARCHAR(11), "
-               "my_lon VARCHAR(11), "
-               "my_name VARCHAR, "
-               "my_rig VARCHAR, "
-               "my_sig VARCHAR, "
-               "my_sig_info VARCHAR, "
-               "my_state VARCHAR, "
-               "my_street VARCHAR, "
-               "name VARCHAR, "
-               "notes VARCHAR, "
-               "nr_bursts INTEGER, "
-               "nr_pings INTEGER, "
-               "operator VARCHAR, "
-               "owner_callsign VARCHAR, "
-               "pfx VARCHAR, "
-               "precedence VARCHAR, "
-               "prop_mode VARCHAR(8), "
-               "public_key VARCHAR, "
-               "qslmsg VARCHAR, "
-               "qslrdate VARCHAR(10), "
-               "qslsdate VARCHAR(10), "
-               "qsl_rcvd VARCHAR(1), "
-               "qsl_sent VARCHAR(1), "
-               "qsl_rcvd_via VARCHAR(1), "
-               "qsl_sent_via VARCHAR(1), "
-               "qsl_via VARCHAR, "
-               "qso_complete VARCHAR(1), "
-               "qso_random INTEGER, "
-               "qth VARCHAR, "
-               "rx_pwr REAL, "
-               "sat_mode VARCHAR, "
-               "sat_name VARCHAR, "
-               "sfi INTEGER, "
-               "sig VARCHAR, "
-               "sig_info VARCHAR, "
-               "srx_string VARCHAR, "
-               "stx_string VARCHAR, "
-               "state VARCHAR, "
-               "station_callsign VARCHAR, "
-               "swl INTEGER, "
-               "ten_ten INTEGER, "
-               "tx_pwr REAL, "
-               "web VARCHAR, "
-               "qso_date_off VARCHAR(10), "
-               "time_off VARCHAR(8), "
-               "transmiterid VARCHAR, "
-               "marked VARCHAR(1), "
-               "lognumber INTEGER NOT NULL, "
-
-               "UNIQUE (call, qso_date, time_on, bandid, modeid), "
-               "FOREIGN KEY (qso_complete) REFERENCES qso_complete_enumeration, "
-               "FOREIGN KEY (qsl_rcvd_via) REFERENCES qsl_via_enumeration, "
-               "FOREIGN KEY (qsl_sent_via) REFERENCES qsl_via_enumeration, "
-               "FOREIGN KEY (qsl_rcvd) REFERENCES qsl_rec_status, "
-               "FOREIGN KEY (qsl_sent) REFERENCES qsl_sent_status, "
-               "FOREIGN KEY (prop_mode) REFERENCES prop_mode_emumeration, "
-               "FOREIGN KEY (my_country) REFERENCES entity, "
-               "FOREIGN KEY (lotw_qsl_rcvd) REFERENCES qsl_rec_status, "
-               "FOREIGN KEY (lotw_qsl_sent) REFERENCES qsl_sent_status, "
-               "FOREIGN KEY (eqsl_qsl_rcvd) REFERENCES qsl_rec_status, "
-               "FOREIGN KEY (eqsl_qsl_sent) REFERENCES qsl_sent_status, "
-               "FOREIGN KEY (credit_submitted) REFERENCES award_enumeration, "
-               "FOREIGN KEY (credit_granted) REFERENCES award_enumeration, "
-               "FOREIGN KEY (country) REFERENCES entity, "
-               "FOREIGN KEY (ant_path) REFERENCES ant_path_enumeration, "
-               "FOREIGN KEY (arrl_sect) REFERENCES arrl_sect_enumeration, "
-               "FOREIGN KEY (band_rx) REFERENCES band, "
-               "FOREIGN KEY (modeid) REFERENCES mode, "
-               "FOREIGN KEY (dxcc) REFERENCES entity, "
-               "FOREIGN KEY (bandid) REFERENCES band)");
+    createTableLog();
 
       //DATE YYYY-MM-DD
       //TIME HHmmss
@@ -1345,6 +1352,7 @@ bool DataBase::updateTo005()
                if (recreateContestData())
                {
                    qDebug() << "DataBase::updateTo005 - recreateContestData OK" << endl;
+                   recreateLog();
                    query.exec ("DROP TABLE logs");
                    query.exec("CREATE TABLE logs ("
                               "id INTEGER PRIMARY KEY AUTOINCREMENT, "
@@ -1387,6 +1395,18 @@ bool DataBase::recreateContestData()
         }
     }
     return false;
+
+}
+
+bool DataBase::recreateLog()
+{
+    QSqlQuery query;
+    bool sqlOk = false;
+    sqlOk = query.exec("DROP TABLE log");
+    if (sqlOk)
+    {
+        return createTableLog();
+    }
 
 }
 
